navbar no longer covers items

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -90,3 +90,6 @@ a.navbar-link:hover {
   height: 27px;
   width: 96px;
 }
+.add_top_margin {
+  margin-top: 60px;
+}
